--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
     </head>
     <body class="d-flex flex-column min-vh-100">
         {% include 'partials/_header.html.twig' %}
+
+        {% include 'partials/_flashes.html.twig' %}
         
         <main class="container pt-5">
             {% block body %}{% endblock %}
