--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -7,6 +7,8 @@
 
     <hr>
 
+    <a href="{{ path('post_add') }}" class="btn btn-success float-end mb-3"><span class="fa-solid fa-plus"></span></a>
+
     <table class="table table-striped table-hover">
         <caption>Liste des articles</caption>
 
