--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -29,8 +29,8 @@
                 <td>{{ post.createdAt | date('d/m/Y') }}</td>
                 <td>
                     <a href="{{ path('post_show', {'post': post.id}) }}" class="btn btn-info"><span class="fa-solid fa-magnifying-glass"></span></a>
-                    <a href="" class="btn btn-warning"><span class="fa-solid fa-pencil"></span></a>
-                    <a href="" class="btn btn-danger"><span class="fa-solid fa-trash"></span></a>
+                    <a href="{{ path('post_update', {'post': post.id}) }}" class="btn btn-warning"><span class="fa-solid fa-pencil"></span></a>
+                    <a href="{{ path('post_delete', {'post': post.id}) }}" class="btn btn-danger"><span class="fa-solid fa-trash"></span></a>
                 </td>
             </tr>
         {% endfor %}
