--- a/templates/post/add.html.twig
+++ b/templates/post/add.html.twig
@@ -9,7 +9,7 @@
 
     {% include 'post/_post_header.html.twig' %}
 
-    {{ form(post_form) }}
+    {% include 'post/_form.html.twig' %}
 {% endblock %}
 
 
