--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -15,6 +15,9 @@
                         <a class="nav-link" href="{{ path('post_index') }}">Articles</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('category_index') }}">Catégories</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('home_contact') }}">Contact</a>
                     </li>
                     <li class="nav-item">
