--- a/templates/category/update.html.twig
+++ b/templates/category/update.html.twig
@@ -7,6 +7,8 @@
 
     <hr>
 
+    {% include 'category/_category_header.html.twig' %}
+
     {% include 'category/_form.html.twig' with {'button_label': 'Mettre à jour'} %}
 {% endblock %}
 
