--- a/templates/partials/_posts_array.html.twig
+++ b/templates/partials/_posts_array.html.twig
@@ -19,7 +19,9 @@
             <td>
                 <a href="{{ path('post_show', {'post': post.id}) }}" class="btn btn-info"><span class="fa-solid fa-magnifying-glass"></span></a>
                 <a href="{{ path('post_update', {'post': post.id}) }}" class="btn btn-warning"><span class="fa-solid fa-pencil"></span></a>
-                <a href="{{ path('post_delete', {'post': post.id}) }}" class="btn btn-danger"><span class="fa-solid fa-trash"></span></a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('post_delete', {'post': post.id}) }}" class="btn btn-danger"><span class="fa-solid fa-trash"></span></a>
+                {% endif %}
             </td>
         </tr>
     {% endfor %}
