[JOUR_5] Ignore de certaines propriétés pour les erreurs  cycliques

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-    <h1>Mon super blog avec plein de superbes articles trop beau !</h1>
+    <h1>Mon super blog avec plein de superbes articles trop beaux !</h1>
 
     <section class="row mt-5">
         <div id="homeCaroussel" class="carousel slide" data-bs-ride="carousel">
