--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -3,5 +3,9 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-    <h1>Contact</h1>
+    <h1>Formulaire de contact</h1>
+
+    <hr>
+
+    {{ form(contact_form) }}
 {% endblock %}
